HW 7 16.1 layer added

--- a/cbrokaw_16_04_layeradded.ipynb
+++ b/cbrokaw_16_04_layeradded.ipynb
@@ -587,6 +587,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import plot_model\n",
+        "from IPython.display import Image"
+      ],
+      "metadata": {
+        "id": "vR6fx2KwQkpx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "pawNidxMDwQn",
@@ -606,8 +618,6 @@
         }
       ],
       "source": [
-        "from tensorflow.keras.utils import plot_model\n",
-        "from IPython.display import Image\n",
         "plot_model(cnn, to_file='convnet.png', show_shapes=True, \n",
         "           show_layer_names=True)\n",
         "Image(filename='convnet.png') "
@@ -801,15 +811,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "images = X_test.reshape((10000, 28, 28))\n",
+        "incorrect_predictions = []"
+      ],
+      "metadata": {
+        "id": "CzUUAmlkQp2m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "0dQeamGDDwQp"
       },
       "outputs": [],
       "source": [
-        "images = X_test.reshape((10000, 28, 28))\n",
-        "incorrect_predictions = []\n",
-        "\n",
         "for i, (p, e) in enumerate(zip(predictions, y_test)):\n",
         "    predicted, expected = np.argmax(p), np.argmax(e)\n",
         "    \n",
